# proyecto-lab-mecanica

./: .gitignore  CMakeLists.txt  main.py  simulador_impacto.cp312-win_amd64.pyd  simulador_impacto.pyd
bindings/: bindings.cpp
src/: simulador.cpp  simulador.hpp
